welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:16: error: value poseBiscuit is not a member of Unit
    	recule poseBiscuit()
               ^